--- a/src/test.css
+++ b/src/test.css
@@ -1,32 +1,3 @@
-<template>
-  <div id="app" class="body-wrapper">
-    <Sidebar/>
-    <Navbar/>
-    <div class="page-wrapper mdc-toolbar-fixed-adjust">
-      <main class="content-wrapper drawer-minimized">
-        <router-view/>
-      </main>
-      <Footer/>
-    </div>
-  </div>
-</template>
-
-<script>
-import Navbar from '@/components/Navbar'
-import Sidebar from '@/components/Sidebar'
-import Footer from '@/components/Footer'
-
-export default {
-  components: {
-    Navbar,
-    Sidebar,
-    Footer
-  },
-  name: 'App'
-}
-</script>
-
-<style>
 @media (max-width:575.98px) {
   .table-responsive-sm {
     display: block;
@@ -79,4 +50,10 @@ export default {
   }
 }
 
-</style>
+.table-responsive {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar
+}
